--- a/digital-ocean/Vagrantfile
+++ b/digital-ocean/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure('2') do |config|
         override.vm.box_url = "https://github.com/devopsgroup-io/vagrant-digitalocean/raw/master/box/digital_ocean.box"
         override.nfs.functional = false
         provider.token = 'Your token'
-        provider.image = 'ubuntu-18-04-x64'
+        provider.image = 'ubuntu-18-04-x64' #centos-7-x64
         provider.region = 'nyc1'
         provider.size = '1gb'
         provider.ssh_key_name = 'osipov_key'
